force-app/main/default/objects/rh2__PS_Describe__c/rh2__PS_Describe__c.object-meta.xml
<CustomObject>
    <description>Manages Rollup Helper Visualforce data structures, Rollup Helper unit testing, and stores information on real-time rollups that require asynchronous processing.</description>
    <label>Describe</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Describe Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Describes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>