force-app/main/default/objects/rh2__PS_Describe__c/fields/rh2__Contact2__c.field-meta.xml
<CustomField>
    <fullName>rh2__Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Describes (Contact2)</relationshipLabel>
    <relationshipName>Describes1</relationshipName>
    <type>Lookup</type>
</CustomField>