force-app/main/default/objects/rh2__PS_Describe__c/fields/rh2__Hierarchy_Test_2__c.field-meta.xml
<CustomField>
    <fullName>rh2__Hierarchy_Test_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hierarchy Test 2</label>
    <referenceTo>rh2__PS_Describe__c</referenceTo>
    <relationshipLabel>Describes (Heirachy Test 2)</relationshipLabel>
    <relationshipName>Describes1</relationshipName>
    <type>Lookup</type>
</CustomField>