force-app/main/default/objects/rh2__PS_Describe__c/fields/rh2__Test_End_Date__c.field-meta.xml
<CustomField>
    <fullName>rh2__Test_End_Date__c</fullName>
    <label>Test End Date</label>
    <type>Date</type>
</CustomField>